--- a/domain/create/templates/cloud-config.yml.j2
+++ b/domain/create/templates/cloud-config.yml.j2
@@ -1,11 +1,14 @@
 #cloud-config
 # {{ ansible_managed }}
 hostname: {{ libvirt_result_domain_name }}
+{% set user_with_groups = libvirt_cloud_config_users|selectattr('groups', 'defined')|list %} 
+{% if user_with_groups|length > 0 %} 
 groups:
-{% for user in libvirt_cloud_config_users if user.groups is defined %}
+{% for user in user_with_groups %}
 {%   for group in user.groups.split(',') %}
-- {{ group }}
+  - {{ group|trim }}
 {%   endfor %}
 {% endfor %}
+{% endif %}
 users:
 {{ libvirt_cloud_config_users | to_nice_yaml }}
